cluster/apps/nzbget-route/manual-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget-service
spec:
  ports:
    - protocol: TCP
      port: 7890 # The service port can be anything, but matching is clear.
      targetPort: 7890 # This must match the port in the Endpoints object.
