cluster/apps/nzbget-route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nzbget-route
  namespace: media
  annotations:
    gethomepage.dev/pod-selector: ""
    gethomepage.dev/description: nzbget
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media Management
    gethomepage.dev/icon: sh-nzbget
    gethomepage.dev/name: nzbget
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway
  hostnames:
    - nzbget.internal.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: nzbget-service
          port: 7890
          weight: 1
